--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">TPAlgebraLineal</string>
+    <string name="Hamming">H A M M I N G</string>
+    <string name="Menu">M E N U</string>
+    <string name="firstButtonString">ENCODE</string>
+    <string name="secondButtonString">ABOUT</string>
+    <string name="thirdButtonString">ANOTHER</string>
+    <string name="fourthButtonString">QR</string>
+    <string name="Encode">E N C O D E</string>
+    <string name="hintInputEncode">Please enter your text here ...</string>
+    <string name="Decode">D E C O D E</string>
+    <string name="Error">E R R O R</string>
+    <string name="hintAnswer">Your answer will appear here</string>
 </resources>
